kubernetes/vote2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote
  namespace: prod
  labels:
    app: vote
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
      - name: vote
        image: mcr.microsoft.com/azuredocs/azure-vote-front:v1
        ports:
          - containerPort: 80
