kubernetes/voteapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voteapp
  namespace: prod
  labels:
    app: voteapplb
spec:
  selector:
    matchLabels:
      app: voteapplb
  replicas: 2
  template:
    metadata:
      labels:
        app: voteapplb
    spec:
      containers:
      - name: voteapp
        image: grabibel/voteapp_brief8_gs:1.0.123
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: clustvoteapp
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: voteapplb
