kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingressvote
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - host: vote.simplon-lion.space
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: clustvoteapp
            port:
              number: 80
  - host: grafana.simplon-lion.space
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: grafana
            port:
              number: 80
  - host: prometheus.simplon-lion.space
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: prometheus-server
            port:
              number: 80
